--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/client": "^2.2.6",
     "@sanity/image-url": "^0.140.22",
@@ -18,6 +21,7 @@
     "react": "17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-dom": "17.0.1",
+    "react-toggle": "^4.1.2",
     "sass": "^1.32.8",
     "swr": "^0.5.3"
   }
