--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sanity/client": "^2.2.6",
     "@sanity/image-url": "^0.140.22",
     "bootstrap": "^4.6.0",
+    "framer-motion": "^4.1.17",
     "highlight.js": "^10.6.0",
     "moment": "^2.29.1",
     "next": "10.0.7",
