--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "highlight.js": "^10.6.0",
     "moment": "^2.29.1",
     "next": "10.0.7",
+    "nodemailer": "^6.6.3",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-bootstrap": "^1.5.0",
